// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "app-plone-backend-deployment-c85baacf",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone-backend-c82290e6",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "image": "plone/plone-backend:latest",
              "imagePullPolicy": "ifNotPresent",
              "name": "backend-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "app-plone-backend-pdb-c8f00fdc",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "app-plone-backend-service-c8efef4c",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 80,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "app-plone-backend-c82290e6",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "app-plone-frontend-deployment-c872e367",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone-frontend-c8d010d1",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone-frontend-c8d010d1",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "RAZZLE_INTERNAL_API_PATH",
                  "value": "http://app-plone-backend-service-c8efef4c:80",
                },
              ],
              "image": "plone/plone-frontend:latest",
              "imagePullPolicy": "ifNotPresent",
              "name": "frontend-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "app-plone-frontend-pdb-c82dd14e",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone-frontend-c8d010d1",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "app-plone-frontend-service-c8f392cd",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 80,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "app-plone-frontend-c8d010d1",
      },
      "type": "ClusterIP",
    },
  },
]
`;

exports[`defaults-with-pdps 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "app-plone_with_pdbs-backend-deployment-c8d5991a",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-backend-c885cd24",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone_with_pdbs-backend-c885cd24",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "image": "plone/plone-backend:latest",
              "imagePullPolicy": "ifNotPresent",
              "name": "backend-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "app-plone_with_pdbs-backend-pdb-c810ca80",
    },
    "spec": {
      "maxUnavailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-backend-c885cd24",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "app-plone_with_pdbs-backend-service-c819541f",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 80,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "app-plone_with_pdbs-backend-c885cd24",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "app-plone_with_pdbs-frontend-deployment-c812b31a",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-frontend-c850bc83",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone_with_pdbs-frontend-c850bc83",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "RAZZLE_INTERNAL_API_PATH",
                  "value": "http://app-plone_with_pdbs-backend-service-c819541f:80",
                },
              ],
              "image": "plone/plone-frontend:latest",
              "imagePullPolicy": "ifNotPresent",
              "name": "frontend-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "app-plone_with_pdbs-frontend-pdb-c8ebc6c1",
    },
    "spec": {
      "minAvailable": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-frontend-c850bc83",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "app-plone_with_pdbs-frontend-service-c8999de8",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 80,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "app-plone_with_pdbs-frontend-c850bc83",
      },
      "type": "ClusterIP",
    },
  },
]
`;
